# dumb-calculator

./: .clang-format  CMakeLists.txt  README.md
include/: calculator.h  dp.h
src/: calculator.cpp  dp.cpp  main.cpp
